middleware + kafka, big features
